--- a/front-end/index.html
+++ b/front-end/index.html
@@ -22,7 +22,7 @@
         <!-- Responsável por receber configurações da página -->
         <title>Casa Criativa</title>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:30,400,600,700,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/backup/css/style.css">
+        <link rel="stylesheet" href="/front-end/css/style.css"> <!-- acessa o css-->
     </head>
 
     <body>
@@ -33,7 +33,7 @@
 
                 <header>
                     <a href="index.html">
-                        <img src="/backup/imagens/logo.png" alt="Imagem da Logomarca">
+                        <img src="/front-end/imagens/logo.png" alt="Imagem da Logomarca">
                     </a>
                 </header>
 
@@ -160,7 +160,7 @@
             </div>
         </div>
 
-        <script src="/backup/javascript/scripts.js"></script>
+        <script src="/front-end/javascript/scripts.js"></script>
     </body>
 
 </html>
